--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <canvas id="canvas" width="1000" height="1000"></canvas>
     <script src="bundle.js"></script>
   </body>
 </html>
